<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/ScrollView"
	>
	<LinearLayout
		style="@style/LinearLayout">
		<TableLayout 
			style="@style/TableLayout">
			<TableRow>
				<TextView 
					style="@style/TextView.Label"
					android:text="@string/split_bill_amount" />
			</TableRow>
			<TableRow>
				<TextView 
					android:id="@+id/lbl_split_amount"
					style="@style/TextView.Amount"/>
			</TableRow>
			<TableRow>		
			<ViewStub android:id="@+id/stub_splitTax"
				android:inflatedId="@+id/inflated_splitTax"
				android:layout="@layout/stub_split_tax"
				/>
			</TableRow>
			<TableRow>
				<TextView 
					style="@style/TextView.Label"
					android:text="@string/split_tip" />
			</TableRow>
			<TableRow>
				<TextView 
					android:id="@+id/lbl_split_tip"
					style="@style/TextView.Amount"/>
			</TableRow>
			<TableRow 
				style="@style/TableRow_Bar">
				
			</TableRow>
			<TableRow>
				<TextView 
					style="@style/TextView.Label"
					android:text="@string/split_total" />
			</TableRow>
			<TableRow>
				<TextView 
					android:id="@+id/lbl_split_total"
					style="@style/TextView.Amount"/>
			</TableRow>
			<TableRow 
				style="@style/TableRow_Bar.Dark">
			</TableRow>
			<TableRow>
				<TextView 
					style="@style/TextView"
					android:text="Number of people:" />
			</TableRow>
			<TableRow>
				<TableLayout 
					style="@style/TableLayout">
					<TableRow>
						<Button 
							android:id="@+id/btn_remove_person"
							style="@style/SplitBillButton"
							android:text="-" />
						<TextView 
							android:id="@+id/lbl_NumberOfPeople"
							style="@style/TextView.Center"
							android:text="2" />
						<Button 
							android:id="@+id/btn_add_person"
							style="@style/SplitBillButton"
							android:text="+" />
					</TableRow>
				</TableLayout>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>